# Pathfinder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake/: CMakeLists.txt  add_checker_executable.cmake  add_local_pmdk_checker.cmake  add_local_pmdk_setup.cmake  add_local_pmdk_test.cmake  add_test_executable.cmake  build_pmdk_version.cmake  get_pmdk_vars.cmake
pathfinder/: CMakeLists.txt  main.cpp
pathfinder/graph/: persistence_graph.cpp  persistence_graph.hpp  pm_graph.cpp  pm_graph.hpp  posix_graph.cpp  posix_graph.hpp
pathfinder/model_checker/: model_checker.cpp  model_checker.hpp  model_checker_state.cpp  model_checker_state.hpp
pathfinder/runtime/: pathfinder_engine.cpp  pathfinder_engine.hpp  pathfinder_fs.cpp  pathfinder_fs.hpp  stack_tree.cpp  stack_tree.hpp
pathfinder/trace/: micro_event.hpp  stack_frame.cpp  stack_frame.hpp  trace.cpp  trace.hpp  trace_event.cpp  trace_event.hpp
pathfinder/type_crawler/: type_crawler.cpp  type_crawler.hpp  type_info.cpp  type_info.hpp
pathfinder/utils/: common.hpp  config.h.in  file_utils.cpp  file_utils.hpp  util.cpp  util.hpp
pin_tool/: README.md  setup.sh
pin_tool/tool_src/: makefile.rules  makefile.unix.config  mmio_read_observer.cpp  posix_read_observer.cpp  posix_tracer.cpp  trace_tool.sh
targets/leveldb-bug-0/: Makefile  README.md  checker.cc  common.h  init.cc  pathfinder-config.ini  setup.sh  workload.cc
targets/leveldb-bug-1/: README.md  checker.cc  common.h  pathfinder-config.ini  setup.sh  workload.cc
targets/leveldb-bug-1/traces/: global_log_file.txt
targets/leveldb-bug-2/: Makefile  README.md  checker.cc  pathfinder-config.ini  setup.sh  workload.cc
targets/leveldb-bug-2/traces/: global_log_file.txt  ops_completed.txt
tests/: CMakeLists.txt
tests/evil_tests/: CMakeLists.txt  array_consistent.c  array_inconsistent.c  evil_consistent.c  evil_inconsistent.c  level_consistent.c  level_inconsistent.c
tests/lib_tests/: CMakeLists.txt  checker.c  consistent.c  inconsistent.c  layout.h
tests/reorder_tests/: CMakeLists.txt  multi_cache_line.h  multi_checker.c  multi_driver.c  simple_bug.h  simple_checker.c  simple_long.c  simple_short.c
tests/simple_tests/: CMakeLists.txt  consistent.c  inconsistent.c  level_consistent.c  level_inconsistent.c
tests/syscall_test/: CMakeLists.txt  Makefile  reader.c  squint-config.ini  writer.c
tests/syscall_test2/: CMakeLists.txt  layout.h  reader.c  squint-config.ini  writer.c
tests/syscall_test3/: CMakeLists.txt  Makefile  layout.h  reader.c  squint-config.ini  writer.c
tools/: CMakeLists.txt  compute-norderings  generate_subgraph.sh  get-orderings-data  graph-eval.in  graph-eval.py  measure-context  run-eval.in  squint-read  state_reduction.csv
tools/bug_graphs/bug_vs_time/mmio/: kvi.json  kvi_cache.json  kvi_paper.json  kvi_paper_slim.json  kvi_wort_cceh_ff.json  levelhash_woart_cache.json  local.json  pmdk.json  pmdk_cache.json  pmdk_cache_paper.json  pmdk_paper.json  pmdk_paper_slim.json  pmdk_trim.json  recipe.json  recipe_cache.json  recipe_paper.json  recipe_paper_slim.json  server.json  server_paper.json  server_paper_slim.json
tools/bug_graphs/bug_vs_time/posix/: server_alice.json  server_squint.json
tools/bug_graphs/crash_state_approx/: crash_state_data.json
tools/code_coverage/: generate_coverage_by_file.sh  time_to_coverage.py
tools/eval_utils/: bug_locations.py  eval_targets.py  get_correlated_crash_states.py  get_total_crash_states.py  gpt_plot_mmio.py  gpt_plot_posix.py  graph_configs.py  locate_bugs_in_results.py  plot_crash_state_approx.py  plot_root_cause_group.py  squint-graph
tools/trace_to_c/: Makefile  generator.cpp
